# rubickcube

./: CMakeLists.txt  README.md  RubikCube.cpp  RubikCube.h  main.cpp
